<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView android:id="@+id/imgUpdateIcon" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/noupload"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView android:id="@+id/tvPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:layout_gravity="left"
            android:textColor="@color/black"/>
        <TextView android:id="@+id/tvPersonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_id"
            android:layout_gravity="left"
            android:textColor="@color/black"/>
        <TextView android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_gravity="left"
            android:textColor="@color/black"/>
        <TextView android:id="@+id/tvAddressName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_name"
            android:layout_gravity="left"
            android:textColor="@color/black"/>
        <TextView android:id="@+id/tvCommitTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commit_time"
            android:layout_gravity="left"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView android:id="@+id/imgFingerPrint" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nofp"/>
    </LinearLayout>

</LinearLayout>